Add dist.sh script.